--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                         <li><button class="dropdown-item" type="button">Особистий кабінет</button></li>
                         <li><button class="dropdown-item" type="button">Повідомлення</button></li>
+                        <li><button class="dropdown-item" type="button">Вподобання</button></li>
+                        <li><button class="dropdown-item" type="button">Кошик</button></li>
                         <li><button class="dropdown-item" type="button">Контакти</button></li>
                         <li><button class="dropdown-item" type="button">Налаштування</button></li>
+                        <li><button class="dropdown-item" type="button">Вихід</button></li>
                     </ul>
                 </div>
             </div>
